artificer/goblin-wrangler/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      securityContext:
        fsGroup: 2000
      volumes:
        - name: postgres-data
          emptyDir: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kingpin
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: kingpin
  template:
    metadata:
      labels:
        app: kingpin
    spec:
      containers:
        - name: kingpin
          image: KINGPIN_IMAGE
          ports:
            - containerPort: 4000
          livenessProbe:
            httpGet:
              path: /api/health/check
              port: 4000
          readinessProbe:
            httpGet:
              path: /api/health/check
              port: 4000
      imagePullSecrets:
        - name: goblin-wrangler

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entertainer
spec:
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: entertainer
  template:
    metadata:
      labels:
        app: entertainer
    spec:
      containers:
        - name: entertainer
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: site
              mountPath: /usr/share/nginx/html
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
      volumes:
        - name: site
          emptyDir: {}
