artificer/goblin-wrangler/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
   - name: database
     protocol: TCP
     port: 5432
     targetPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: kingpin
spec:
  selector:
    app: kingpin
  ports:
   - name: app
     protocol: TCP
     port: 4000
     targetPort: 4000
